--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
   "name": "pokedex_accredify",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "test:unit": "vue-cli-service test:unit",
+    "dev": "vite",
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@vue/babel-preset-app": "^5.0.8",
+    "@vue/cli": "^5.0.8",
+    "@vue/cli-plugin-unit-jest": "~5.0.0",
+    "babel-jest": "^29.4.2",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^4.1.0"
+    "@vue/test-utils": "^2.0.0-0",
+    "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "babel-jest": "^29.4.2",
+    "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
+    "vite": "^4.1.0",
+    "vue3-jest": "^27.0.0-alpha.1"
   }
 }
